# rust-exercises

./: .gitignore  Cargo.toml  README.md
cargo/: README.md
cargo/app/: Cargo.toml
cargo/uuid-sample/: Cargo.toml
mandelbrot/: Cargo.toml  LICENSE_MIT
mandelbrot/src/: lib.rs  logic.rs
mandelbrot/www/: index.html  index.js
numberplace/: Cargo.toml  README.md
numberplace/src/: lib.rs
numberplace/www/: index.js
samplecli/: Cargo.toml
samplecli/src/: main.rs
src/: ex_async.rs  ex_basic.rs  ex_test.rs  main.rs
stm32/: Cargo.toml  Dockerfile  README.md  runner.sh
stm32/.cargo/: config
stm32/src/: alloc.rs  heapless.rs  main.rs  panic.rs
todo/: Cargo.toml  Dockerfile
todo/src/: main.rs
todo/templates/: index.html
ui_demo/: Cargo.toml
ui_demo/src/: main.rs
