[package]
name = "rust-exerciese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
futures = "0.3.24"
